# DrawTogether

./: .gitignore  README.md
.github/workflows/: MainWorkflow.yml
FinalProject/milestones/: README.md
FinalProject/milestones/0/: README.md
FinalProject/milestones/1/: README.md
FinalProject/milestones/5/: README.md
FinalProject/milestones/7/: README.md
FinalProject/milestones/8/: README.md
FinalProject/milestones/9/: README.md
FinalProject/project/: App  App_Test  CMakeLists.txt  Makefile  cmake_install.cmake  macbuild.sh
FinalProject/project/include/: App.hpp  BaseShape.hpp  Circle.hpp  Command.hpp  Draw.hpp  PaintCanvas.hpp  Server.hpp  Square.hpp  Triangle.hpp  catch_amalgamated.hpp  clientnetwork.hpp  helper.hpp
FinalProject/project/src/: App.cpp  BaseShape.cpp  Circle.cpp  Command.cpp  Draw.cpp  PaintCanvas.cpp  Square.cpp  Triangle.cpp  clientnetwork.cpp  main.cpp
FinalProject/project/tests/: main_test.cpp
FinalProject/refactor/: CMakeLists.txt  README.md
FinalProject/refactor/include/: ClientConnection.hpp  ClientController.hpp  PaintCanvas.hpp  Parser.hpp  ServerConnection.hpp
FinalProject/refactor/src/: ClientConnection.cpp  ClientController.cpp  PaintCanvas.cpp  Parser.cpp  ServerConnection.cpp  main.cpp
FinalProject/refactor/tests/: PaintCanvas_test.cpp
labs/: README.md
labs/Lab10_CI/: README.md  main.cpp
labs/Lab10_CI/src/: main.cpp
labs/Lab8_Networking/: README.md
labs/Lab8_Networking/part1/: CMakeLists.txt  Readme.md
labs/Lab8_Networking/part1/src/: Command.cpp  main.cpp
labs/Lab8_Networking/part1/tests/: main_test.cpp
labs/Lab8_Networking/part2/: CMakeLists.txt  Readme.md
labs/Lab8_Networking/part2/src/: main.cpp
labs/Lab9_GUI/: README.md
labs/Lab9_GUI/nuklear_gui/: README.md  linuxbuild.sh  macbuild.sh  main.cpp  mygui
labs/Lab9_GUI/wxWidgets_GUI/: README.md  sfml.cpp
